Reorganization of header files to solve some compilation problems.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2007/11/07
+	5. Reorganization of header files to solve some compilation problems.
 2007/10/30
 	4. First version successfully tested with hppWalkPlanner.
 	
