--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008/04/17
+	10. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall"
+	
 2008/02/07
 	9. Changed the class inheritance organization:
 	  9.1. ChppHumanoidRobot now virtually derives from CimplHumanoidDynamicRobot and is not anymore instanciated through the template mechanism,
