--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008/05/10
+	11. Added access functions to ChppJoints corresponding to feet, hand and gaze.
+	
 2008/04/17
 	10. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
 	
