--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+hppModel 1.5 released March 14, 2009.
+
 	19. Implementation of configuration conversion functions
 	    kwsToJrlDynamicsDofValues (KineoWorks -> jrlDynamics)
 	    jrlDynamicsToKwsDofValues (jrlDynamics -> KineoWorks)
