--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-05-02  Florent Lamiraux  <florent@laas.fr>
+
+	Remove useless code.
+	* src/hppBody.cpp: In addSolidComponent(), 
+	variable kcdObject was defined and initialized,
+	but not used.
+
 hppModel 1.5 released March 14, 2009.
 
 	19. Implementation of configuration conversion functions
