Upgrade package.doc.in.
	* doc/package.dox.in: Remove obsolete commands.

Signed-off-by: florent <Florent Lamiraux florent@laas.fr>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-05-03  Florent Lamiraux  <florent@laas.fr>
+
+	Upgrade package.doc.in.
+	* doc/package.dox.in: Remove obsolete commands.
+
 2009-05-02  Florent Lamiraux  <florent@laas.fr>
 
 	Make documentation reflect implementation.
