--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-05-08  Florent Lamiraux  <florent@laas.fr>
+
+	Add debug output relative to distance computation.
+	* src/hppBody.cpp: 
+
 2009-05-04  Florent Lamiraux  <florent@laas.fr>
 
 	In addInnerObject() do not return before the end of the function.
