Remove obsolete attribute attExactAnalyzer in class ChppBody.
	* include/hppModel/hppBody.h: .
	* src/hppBody.cpp: .

Signed-off-by: florent <Florent Lamiraux florent@laas.fr>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-06-23  Florent Lamiraux  <florent@laas.fr>
 
+	Remove obsolete attribute attExactAnalyzer in class ChppBody.
+	* include/hppModel/hppBody.h: .
+	* src/hppBody.cpp: .
+
+2009-06-23  Florent Lamiraux  <florent@laas.fr>
+
 	Remove deprecated functions in class ChppBody.
 	* include/hppModel/hppBody.h: 
 	* src/hppBody.cpp: 
