--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
+06/23/2009 Release 1.7.0
 
 	For distance computations between ChppBody objects and objects of the 
 	environment, tolerance is now ignored.
