--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-06-23  Florent Lamiraux  <florent@laas.fr>
 
+	Dump current version as 1.7.0.99.
+	* configure.ac: Upgrade version number.
+
+2009-06-23  Florent Lamiraux  <florent@laas.fr>
+
 	Release 1.7.0.
 	* NEWS: Notify release
 	* configure.ac: upgrade version number.
