--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+11/23/2009 Release 1.7.4
+
+	   Compatibility with abstractRobotDynamics-1.15.0.
+
 06/23/2009 Release 1.7.0
 
 	For distance computations between ChppBody objects and objects of the 
